<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="DigitalOutputs" Id="{00222bf0-a1a8-45d2-a046-556525ac83f5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    HydraulicPumpRunningLamp  AT %Q* : BOOL;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>